--- a/stlye.css
+++ b/stlye.css
@@ -7,6 +7,11 @@
   font-family: "Roboto", sans-serif;
 }
 
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 .purple {
   color: #7342d6;
 }
@@ -14,8 +19,6 @@
 img {
   width: 100%;
   height: 100%;
-  max-height: 50vh;
-  padding: 20px;
 }
 
 button {
@@ -23,6 +26,10 @@ button {
 }
 button:active {
   transform: translateY(1px);
+}
+
+p {
+  line-height: 1.5;
 }
 
 /* 
@@ -142,6 +149,14 @@ h2 {
 
 .header__img--wrapper {
   padding: 20px;
+  z-index: 2;
+}
+
+.header__img {
+  width: 100%;
+  height: 100%;
+  max-height: 50vh;
+  padding: 20px;
 }
 
 .container {
@@ -160,6 +175,33 @@ HIGHLIGHTS
 
 */
 
+#highlights {
+  position: relative;
+}
+
+#highlights:before,
+#highlights:after {
+  background: url("library-assets/wave.svg");
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 101vw;
+  height: 12vw;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+
+#highlights:before {
+  transform: translateY(-100%);
+  top: 1px;
+}
+
+#highlights:after {
+  transform: translateY(100%) rotate(180deg);
+  bottom: 1px;
+}
+
 .highlight__wrapper {
   display: flex;
 }
@@ -174,23 +216,80 @@ HIGHLIGHTS
 }
 
 .highlight__img {
-    border: 2px solid #e2d9f6;
-    border-radius: 4px;
-    width: 100px;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 32px;
-    margin-bottom: 24px;
+  border: 2px solid #e2d9f6;
+  border-radius: 4px;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 32px;
+  margin-bottom: 24px;
 }
 
 .highlight__subtitle {
-    font-size: 20px;
-    margin-bottom: 16px;
+  font-size: 20px;
+  margin-bottom: 16px;
 }
 
 .highlight__para {
-    text-align: center;
-    font-size: 18px;
+  text-align: center;
+  font-size: 18px;
+  max-width: 300px;
+}
+
+/*
+
+FEATURES
+
+*/
+
+#features {
+    padding-top: 8vw;
+  background-color: #e2d9f6;
+}
+
+.books {
+  display: flex;
+}
+
+.book {
+  width: 25%;
+  padding: 24px;
+}
+
+.book__img {
+    max-height: 380px;
+    border-radius: 4px;
+    overflow: hidden;
+    transition: all 300ms ease;
+    cursor: no-drop;
+}
+
+.book__img--wrapper {
+    margin-bottom: 8px;
+    display: flex;
+}
+.book:hover .book__img {
+    transform: scale(1.03);
+}
+
+.book__title {
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+.book__title:hover {
+    text-decoration: underline;
+    cursor: no-drop;
+}
+
+.book__ratings {
+    margin-bottom: 8px;
+    color: #fabf2a;
+}
+
+.book__price--normal {
+    text-decoration: line-through;
+    padding-right: 6px;
+    color: #909090;
 }
