--- a/stlye.css
+++ b/stlye.css
@@ -7,6 +7,10 @@
   font-family: "Roboto", sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
   max-width: 100vw;
   overflow-x: hidden;
@@ -24,12 +28,83 @@ img {
 button {
   cursor: pointer;
 }
+button:hover {
+    transform: translateY(-1px);
+}
 button:active {
   transform: translateY(1px);
 }
 
 p {
   line-height: 1.5;
+}
+
+.no-cursor {
+    cursor: no-drop;
+}
+
+a {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+
+.btn__menu {
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;
+    border: none;
+    display: none;
+}
+
+.menu__backdrop {
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 300ms ease;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.menu--open .menu__backdrop {
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu--open {
+    max-height: 100vh;
+    overflow-y: hidden;
+}
+
+.menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu__list {
+    padding: 32px 0;
+}
+
+.menu__link {
+    font-size: 40px;
+    color: white;
+}
+
+.btn__menu--close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
 }
 
 /* 
@@ -100,7 +175,7 @@ HEADER
 
 */
 
-.landing {
+#landing {
   background-color: #e2d9f6;
 }
 
@@ -169,6 +244,12 @@ h2 {
   margin: 0 auto;
 }
 
+.row__column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 /*
 
 HIGHLIGHTS
@@ -204,6 +285,7 @@ HIGHLIGHTS
 
 .highlight__wrapper {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .highlight {
@@ -211,8 +293,8 @@ HIGHLIGHTS
   width: calc(100% / 3);
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  
 }
 
 .highlight__img {
@@ -230,6 +312,7 @@ HIGHLIGHTS
 .highlight__subtitle {
   font-size: 20px;
   margin-bottom: 16px;
+  text-align: center;
 }
 
 .highlight__para {
@@ -245,12 +328,13 @@ FEATURES
 */
 
 #features {
-    padding-top: 8vw;
+  padding-top: 8vw;
   background-color: #e2d9f6;
 }
 
 .books {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .book {
@@ -259,37 +343,142 @@ FEATURES
 }
 
 .book__img {
-    max-height: 380px;
-    border-radius: 4px;
-    overflow: hidden;
-    transition: all 300ms ease;
-    cursor: no-drop;
+  border-radius: 4px;
+  overflow: hidden;
+  transition: all 300ms ease;
+  cursor: no-drop;
 }
 
 .book__img--wrapper {
-    margin-bottom: 8px;
-    display: flex;
+  margin-bottom: 8px;
+  display: flex;
 }
 .book:hover .book__img {
-    transform: scale(1.03);
+  transform: scale(1.03);
 }
 
 .book__title {
-    font-size: 20px;
-    margin-bottom: 8px;
+  font-size: 20px;
+  margin-bottom: 8px;
 }
 .book__title:hover {
-    text-decoration: underline;
-    cursor: no-drop;
+  text-decoration: underline;
+  cursor: no-drop;
 }
 
 .book__ratings {
-    margin-bottom: 8px;
-    color: #fabf2a;
+  margin-bottom: 8px;
+  color: #fabf2a;
 }
 
 .book__price--normal {
-    text-decoration: line-through;
-    padding-right: 6px;
-    color: #909090;
+  text-decoration: line-through;
+  padding-right: 6px;
+  color: #909090;
+}
+
+/*
+
+RECENTS
+
+*/
+
+.books__recent {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/*
+
+EXPLORE
+
+*/
+
+#explore {
+    background-color: #e2d9f6;
+}
+
+.explore__description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 12px;
+}
+
+/*
+
+FOOTER
+
+*/
+
+footer {
+    background-color: #242424;
+}
+
+.footer__img--logo {
+    width: 160px;
+    filter: grayscale(1) invert(1);
+}
+
+.footer__logo {
+    display: flex;
+}
+
+.footer__link,
+.footer__copyright {
+    color: #fff;
+}
+
+.footer__list {
+    margin: 20px 0 24px 0;
+}
+
+.footer__link {
+    padding: 0 8px;
+}
+
+/* 
+
+SMALL PHONES, TABLETS, LARGE SMARTOHONES
+
+*/
+
+@media (max-width: 768px) {
+    .header__description {
+        padding: 0 24px;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    h2 {
+        font-size: 26px;
+    }
+
+    button {
+        font-size: 18px;
+    }
+
+    .book {
+        width: 50%;
+    }
+}
+
+
+@media (max-width: 550px) {
+    .nav__links {
+        display: none;
+    }
+
+    .btn__menu {
+        display: block;
+    }
+
+    .highlight {
+        width: 100%;
+    }
+    .highlight:not(:last-child) {
+        margin-bottom: 24px;
+    }
 }
